# Connect4

./: README.md  connect4.cabal  ideas.txt
src/: Connect4.hs  Main.hs  Misc.hs  Players.hs  Types.hs
src/Player/: Human.hs  Medium.hs
