name:                connect4
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              jaime azcorra-sedano, andres anhalzer
maintainer:          j
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable connect4
  main-is:             Connect4.hs
  build-depends:       base >=4.9 && <4.10, random >=1.1 && <1.2, time-out, time-units
  hs-source-dirs:      src
  other-modules:       Checks,
                       Types,
                       Misc

  default-language:    Haskell2010

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9 && <4.10, process
