name:                connect4
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:
author:              Andres Anhalzer, Jaime Azcorra
maintainer:          aanhalze@terpmail.umd.edu
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable connect4
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       gloss,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
